// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExceedsDollarAmountRule renders the high level dollar amount rule equivalent when USD is not store currency 1`] = `
<div>
  <li>
    An order exceeds the equivalent of
     
    <strong>
      $1,000.00 USD
    </strong>
     
    in Euro.
  </li>
</div>
`;

exports[`ExceedsDollarAmountRule renders the high level dollar amount rule when USD is store currency 1`] = `
<div>
  <li>
    An order exceeds
     
    <strong>
      $1,000.00.
    </strong>
  </li>
</div>
`;

exports[`ExceedsDollarAmountRule renders the standard level dollar amount rule equivalent when USD is not store currency 1`] = `
<div>
  <li>
    An order exceeds the equivalent of
     
    <strong>
      $1,000.00 USD
       
    </strong>
     
    in Euro
     
    or
     
    <strong>
      10 items.
    </strong>
  </li>
</div>
`;

exports[`ExceedsDollarAmountRule renders the standard level dollar amount rule when USD is store currency 1`] = `
<div>
  <li>
    An order exceeds
     
    <strong>
      $1,000.00
       
    </strong>
    or
     
    <strong>
      10 items.
    </strong>
  </li>
</div>
`;
